# mid-journey

./: .gitignore  Cargo.toml  build.gradle  gradle.properties  nn_config.json  nn_config.jsonc
buildSrc/: build.gradle
nn_cli/: Cargo.toml  readme.md
nn_cli/src/: main.rs
src/main/java/nl/theepicblock/mid/journey/: AssBlock.java  AssScreen.java  MidJourney.java  MidJourneyClient.java  NNConfig.java  OkLab.java  RequestAmazingAiStuffToHappenPls.java
src/main/java/nl/theepicblock/mid/journey/leko_kule/: ColourBlock.java  ColourBlockEntity.java  ColourComponent.java
src/main/java/nl/theepicblock/mid/journey/mc3/: AetherException.java  Aethereum.java  NextGenBlock.java
src/main/java/nl/theepicblock/mid/journey/mixin/: ExampleMixin.java
src/main/java/nl/theepicblock/mid/journey/nn/: NNConfig.java  NetworkParameters.java  NeuralNetwork.java
src/main/resources/: fabric.mod.json  mid-journey.mixins.json
src/main/resources/assets/mid-journey/blockstates/: ass_block.json  colour_block.json
src/main/resources/assets/mid-journey/lang/: en_us.json
src/main/resources/assets/mid-journey/models/block/: ass_block.json  colour_block.json
src/main/resources/assets/mid-journey/models/item/: ass_block.json  colour_block.json
trainer/: Cargo.toml  math.md
trainer/src/: color.rs  gpu.rs  input.rs  layer.rs  lib.rs  main.rs  misc.rs  neural_network.rs  string.rs  trainer.rs  training_data.rs
trainer/src/shaders/: apply_backprop_biases.wgsl  apply_backprop_weights.wgsl  backpropagation.wgsl  backpropagation_start.wgsl  compute_forwards.wgsl  lib.wgsl  mod.rs
(+2 files in other folders)
