[package]
name = "nn_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trainer = { version = "0.1.0", path = "../trainer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
crossterm = { version = "0.27.0", features = ["bracketed-paste"] }
futures = "0.3.30"
