[package]
name = "trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color_processing = "0.6.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
wgpu = "0.20.0"
futures-channel = "0.3.29"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
futures = "0.3.30"
bytemuck = { version = "1.16.0", features = ["derive"] }
map-macro = "0.3.0"
